2023-02-24  Oliver Kiddle  <opk@zsh.org>

	* Shohei YOSHIDA: 51473: Completion/Unix/Command/_cal:
	Update cal/ncal completion

	* Sebastian Stark: 51470 (tweaked, c.f. 51476):
	Completion/Zsh/Command/_cd: Separate cdpath elements in
	path-directories completion

	* 51474: Completion/Unix/Command/_ansible: make -e and --vault-id
	options repeatable and update for new options to ansible 2.13.2

2023-02-21  Peter Stephenson  <p.stephenson@samsung.com>

	* 51466: Src/params.c: fix access to autoloaded parameter.

2023-02-20  Bart Schaefer  <schaefer@zsh.org>

	* 51431: Src/builtin.c: "typeset -p" shouldn't change parameter flags

2023-02-19  Oliver Kiddle  <opk@zsh.org>

	* 51456: Completion/Unix/Command/_git: complete only modified
	files with git add -u

	* 51455, 51461: Completion/Unix/Type/_ldap_attributes
	Completion/BSD/Command/_ldap, Completion/Unix/Command/_openldap,
	Completion/Unix/Type/_ldap_filters: new completion for the OpenLDAP
	client tools including a helper function for LDAP search filters

2023-02-17  Oliver Kiddle  <opk@zsh.org>

	* 51447: Src/Zle/zle_keymap.c: silence compiler maybe-uninitialized
	warning by combining a couple of variables

	* Øystein Walle: 51391: Completion/Unix/Command/_git:
	complete remote branch names respecting --delete for git push

2023-02-14  Bart Schaefer  <schaefer@zsh.org>

	* 51437: Src/params.c, Test/K01nameref.ztst: Fix incorrectly-passed
	test case, masked by unrelated bug.  Improve warnnestedvar message.

2023-02-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 51425: Src/exec.c, Test/E01OPTIONS: $(<...) shouldn't try to
	open a file with NO_EXEC.

2023-02-13  Bart Schaefer  <schaefer@zsh.org>

	* 51430: Src/Modules/parameter.c, Src/builtin.c, Src/params.c,
	Test/K01nameref.ztst: Fix and test for regression of assignment
	when using typeset command, fix output of typeset +m and
	$parameters[ref], prevent segfault in typeset.

2023-02-12  Bart Schaefer  <schaefer@zsh.org>
