@@ -1,3 +1,7 @@
+2023-02-26  Bart Schaefer  <schaefer@zsh.org>
+
+	* 51460: Src/module.c: avoid crash on bad parameter autofeature
+
 2023-02-24  Oliver Kiddle  <opk@zsh.org>
 
 	* Shohei YOSHIDA: 51473: Completion/Unix/Command/_cal:
